<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KRUGIS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">KRUGIS</string>
    <string name="BLOCK_CAMERA">Block camera</string>
    <string name="BLOCK_MICRO">Block microphone</string>
    <string name="START_CAM">Start cam service</string>
    <string name="STOP_CAM">Stop cam service</string>
    <string name="START_MIC">Start mic service</string>
    <string name="STOP_MIC">Stop mic service</string>
    <string name="SHOW_WHITE">Show white list</string>
    <string name="SHOW_BLACK">Show black list</string>
    <string name="title_activity_toast_pressed_activity">Application Blocker</string>
    <string name="title_activity_white_list">White List</string>
    <string name="title_activity_black_list_activity">Black List</string>
    <string name="title_activity_white_list_activity">White List</string>
    <string name="title_activity_Files_connect_activity">Files</string>
    <string name="exit_app_block">Exit application, block camera</string>
    <string name="exit_app_block_mic">Exit application, block microphone </string>
    <string name="add_to_white">Add to white list</string>
    <string name="add_to_blavk">Add to black list</string>
    <string name="allow_this">Allow this time</string>
    <string name="exit_app">Exit app</string>
    <string name="UNLOCK_CAM">Unlock camera</string>
    <string name="UNLOCK_MIRCO">Unlock microphone</string>
    <string name="title_activity_files_connect">Files_connect</string>
    <string name="title_activity_swipe_list_view">SwipeListViewActivity</string>
    <string name="update_status">Update services status</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="hello_world">Hello world!</string>

</resources>
