<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.oit_sergei.KRUGIS.MainActivity"
                android:clickable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BLOCK_CAMERA"
                android:id="@+id/block_cam_btn"
                android:layout_weight="50"
                android:onClick="onBlockCameraClick"
                style="@style/ThemeButton"
                android:textColor="@drawable/button_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:minWidth="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UNLOCK_CAM"
                android:id="@+id/unlock_cam_btn"
                android:layout_weight="50"
                android:onClick="onUnlockCameraClick"
                style="@style/ThemeButton"
                android:textColor="@drawable/button_text_color"
                android:textStyle="bold"
                android:textSize="15sp" />
        </LinearLayout>

        <Space
            android:layout_height="5dp"
            android:layout_width="0dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BLOCK_MICRO"
                android:id="@+id/block_micro_btn"
                android:layout_weight="50"
                android:onClick="onBlockMicroClick"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@drawable/button_text_color"
                style="@style/ThemeButton" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:minWidth="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UNLOCK_MIRCO"
                android:id="@+id/unlock_micro_btn"
                android:layout_weight="50"
                android:onClick="onUnlockMicroClick"
                style="@style/ThemeButton"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@drawable/button_text_color" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/START_CAM"
                android:id="@+id/start_cam_btn"
                android:layout_weight="50"
                android:onClick="onCameraServiceStartClick"
                style="@style/ThemeButton"
                android:textColor="@drawable/button_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:minWidth="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STOP_CAM"
                android:id="@+id/stop_cam_btn"
                android:layout_weight="50"
                android:onClick="onCameraServiceStopClick"
                style="@style/ThemeButton"
                android:textColor="@drawable/button_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/START_MIC"
                android:id="@+id/start_mic_btn"
                android:layout_weight="50"
                android:onClick="onMicrophoneServiceStartClick"
                style="@style/ThemeButton"
                android:textColor="@drawable/button_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:minWidth="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STOP_MIC"
                android:id="@+id/stop_mic_btn"
                android:layout_weight="50"
                android:onClick="onMicrophoneServiceStopClick"
                style="@style/ThemeButton"
                android:textColor="@drawable/button_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SHOW_WHITE"
                android:id="@+id/show_white_btn"
                android:layout_weight="50"
                android:onClick="onStartWhiteList"
                style="@style/ThemeButton"
                android:textColor="@drawable/button_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:minWidth="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SHOW_BLACK"
                android:id="@+id/show_black_btn"
                android:layout_weight="50"
                android:onClick="onStartBlackList"
                style="@style/ThemeButton"
                android:textColor="@drawable/button_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@drawable/main_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@drawable/main_color"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_status"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:onClick="update_services_status"
            style="@style/ThemeButton"
            android:textColor="@drawable/button_text_color"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="10dp" />

    </LinearLayout>

</RelativeLayout>
